# Javers

./: .dockerignore  .gitignore  Dockerfile  README.md  build_image.ps1  build_image.sh  pyproject.toml
bot/: Customization_tools.py  app.py  server.py  speech_to_text.py
bot/static/: a5a50e3b-b16a-4375-b824-129c458f1371.m4a
